# md-editor

./: .gitignore  CHANGELOG.md  README.md  VERSION  index.html  markdown-help.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-macos.yml  build-windows.yml  release-all-unsigned.yml  release-linux.yml  release-macos-sign.yml  release-macos.yml  release-windows-linux.yml  release-windows.yml
design-pack/: DESIGN-BRIEF.md  version.ts
design-pack/docs/: 03-frontend.md  06-ui-ux.md  README.md  specification.md
design-pack/hooks/: useAppMenu.ts  useFormatMenuActions.ts
design-pack/screenshots/: README.txt
design-pack/styles/: editor-toolbar.css  editor.css  globals.css  layout.css  preview.css  themes.css  titlebar.css
docs/: TESTING.md  TODO.md  editor-toolbar-lucide.md  formatting-tools-plan.md  plan.md  settings-plan.md  specification.md
examples/sample-docs/: README.md  examples.md  getting-started.md  markdown-features-test.md  new-files.md
scripts/: assemble-design-pack.sh  sync-tauri-bundle-version.mjs  sync-windows-msi-version.mjs
src/: main.tsx  version.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: file.rs  mod.rs  preferences.rs
src-tauri/src/models/: mod.rs
src/hooks/: useActiveViewMode.ts  useAppMenu.ts  (+12 more)
technical-guide/: 01-overview.md  02-architecture.md  03-frontend.md  04-markdown-engine.md  05-backend.md  06-ui-ux.md  07-api-reference.md  08-development.md  README.md
(+120 files in other folders)
